# SLMvsLLM

./: Claude.csv  Main.ipynb  README.md  augmented_dataset_x10.csv  df_sliced.csv  df_sliced_10x.csv  pyproject.toml  synthetic_dataset.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
